# suzuki_yield_predict_external

./: .gitignore  LICENSE.txt  README.md  environment.yml  setup.cfg
src/autoqchem_boosted/: LICENSE.md  config.yml  full_pipeline_openbabel.py  full_pipeline_rdkit.py  gaussian_log_extractor.py  helper_functions.py  imports.py
src/data/: featurize.py  read_data.py  split.py  test.py
src/models/: chemist_survey.py  ffnn.py  gnn_cgr.py  hyperparam_opt.py  main_models.py  monomer_replacement.py  post_2021.py  retrospective_modeling.py
src/utils/: atom_mapping.py  extract_dft_descriptors.py  monomer_similarity.py  plotting.py
