[metadata]
name = suzuki
description = suzuki yield prediction and library design with abbvie 15 year parallel library dataset 
long_description = file: README.md
author = Priyanka Raghavan
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   pandas

[options.packages.find]
where=src